доработаны и исправлены классы и методы для Book