@@ -1,30 +1,40 @@
 package com.itexus.service.impl;
 
+import com.itexus.domain.Author;
 import com.itexus.domain.Book;
+import com.itexus.domain.Genre;
 import com.itexus.dto.BookDTO;
 import com.itexus.dto.converters.BookConverters;
+import com.itexus.repository.AuthorRepository;
 import com.itexus.repository.BookRepository;
+import com.itexus.repository.GenreRepository;
 import com.itexus.service.BookService;
 import jakarta.persistence.EntityNotFoundException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional
 public class BookServiceImpl implements BookService {
     private final BookRepository bookRepository;
     private final BookConverters bookConverters;
+    private final AuthorRepository authorRepository;
+    private final GenreRepository genreRepository;
 
-    public BookServiceImpl(BookRepository bookRepository, BookConverters bookConverters) {
+    public BookServiceImpl(BookRepository bookRepository, BookConverters bookConverters, AuthorRepository authorRepository, GenreRepository genreRepository) {
         this.bookRepository = bookRepository;
         this.bookConverters = bookConverters;
+        this.authorRepository = authorRepository;
+        this.genreRepository = genreRepository;
     }
 
     @Override
     public List<BookDTO> findAllBooks() {
-        return bookRepository.findAll().stream().map(bookConverters::toDTO).toList();
+        return bookRepository.findAll().stream().map(bookConverters::toDTO).collect(Collectors.toList());
     }
 
     @Override
@@ -34,19 +44,43 @@ public class BookServiceImpl implements BookService {
     }
 
     @Override
-    public Long saveBook(BookDTO bookDTO) {
-        // Реализация сохранения книги
-        return null;
+    public BookDTO saveBook(BookDTO bookDTO) {
+        Book book = bookConverters.fromDTO(bookDTO);
+        book = bookRepository.save(book);
+        return bookConverters.toDTO(book);
     }
 
     @Override
     public BookDTO updateBook(BookDTO bookDTO) {
+        // Находим книгу по ID
         Book book = bookRepository.findById(bookDTO.getId())
                 .orElseThrow(() -> new EntityNotFoundException(String.format("Книги с id %d не найдено.", bookDTO.getId())));
+
+        // Обновляем поля книги
         book.setTitle(bookDTO.getTitle());
         book.setDescription(bookDTO.getDescription());
         book.setPublishedDate(bookDTO.getPublishedDate());
-        return bookConverters.toDTO(bookRepository.save(book));
+
+        // Загружаем жанр из базы данных
+        if (bookDTO.getGenre() != null) {
+            Genre genre = genreRepository.findById(bookDTO.getGenre().getId())
+                    .orElseThrow(() -> new EntityNotFoundException(String.format("Жанр с id %d не найден.", bookDTO.getGenre().getId())));
+            book.setGenre(genre);
+        }
+
+        // Обновляем авторов
+        if (bookDTO.getAuthors() != null) {
+            Set<Author> updatedAuthors = bookDTO.getAuthors().stream()
+                    .map(authorDTO -> authorRepository.findById(authorDTO.getId())
+                            .orElseThrow(() -> new EntityNotFoundException(String.format("Автор с id %d не найден.", authorDTO.getId()))))
+                    .collect(Collectors.toSet());
+            book.setAuthors(updatedAuthors);
+        }
+
+        // Сохраняем обновленную книгу и преобразуем ее в BookDTO
+        Book updatedBook = bookRepository.save(book);
+
+        return bookConverters.toDTO(updatedBook);
     }
 
     @Override
@@ -55,10 +89,4 @@ public class BookServiceImpl implements BookService {
                 .orElseThrow(() -> new EntityNotFoundException(String.format("Книги с id %d не найдено.", id)));
         bookRepository.delete(book);
     }
-
-    @Override
-    public void addAuthorToBook(Long bookId, Long authorId) {
-        // Реализация добавления автора к книге
-    }
-
 }
